# ayqm-webapp

./: .env.example  .gitignore  README.md  agents.md  ideas.md  pyproject.toml
backend/: agents.md
backend/app/: auth.py  config.py  db.py  main.py  repositories.py  schemas.py  workers.py
backend/app/routes/: auth.py  episodes.py  jobs.py  public.py  speakers.py  trivia.py
backend/app/services/: rephrase.py  speaker_labels.py  transcription.py  trivia.py
frontend/: agents.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  admin.tsx  api.ts  episode-admin.test.tsx  episode-admin.tsx  main.tsx  public.tsx  styles.css  transcript.test.ts  transcript.ts  types.ts  ui.tsx  workflow.test.ts  workflow.ts
tests/: conftest.py  test_admin_api.py  test_api.py  test_db.py  test_speaker_labels.py  test_transcription_service.py
